Fix horizontal scroll bar appearing in turns table

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -82,7 +82,6 @@ select {
     border-bottom-right-radius: 5px;
     display: inline-block;
     overflow-y: auto;
-    width: 100%;
     margin: 0;
     table-layout: fixed;
   }
